# zenith

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  server.json
zenith-cli/: Cargo.toml
zenith-cli/assets/plugin-commands/: zenith-brand.md  zenith-new.md
zenith-cli/assets/skill/: SKILL.md
zenith-cli/src/: cli.rs  dispatch.rs  history.rs  json_types.rs  lib.rs  library.rs  selfupdate.rs
zenith-cli/src/cli/: asset.rs  perceive.rs  render.rs  schema.rs  workspace.rs
zenith-cli/src/commands/: asset.rs  composition_imports.rs  fmt.rs  fonts.rs  inspect.rs  library.rs  merge.rs  migrate.rs  mod.rs  perceive.rs  render.rs  schema.rs  theme.rs  tokens.rs  tx.rs  validate.rs
zenith-cli/src/dispatch/: render.rs  workspace.rs
zenith-cli/src/mcp/: exec.rs  mod.rs  tools.rs
zenith-cli/tests/: asset_import.rs  history_nav.rs  history_versions.rs  inspect_agent_runs.rs  inspect_previews.rs  mcp.rs  merge_pipeline.rs  migrate.rs  new.rs  perceive.rs  plugin.rs  render_integration.rs  render_policy.rs  theme.rs  theme_apply.rs  tx_pipeline.rs  workspace.rs
zenith-core/: Cargo.toml
zenith-core/assets/fonts/: ABOUT.txt
zenith-core/src/: color.rs  diag_catalog.rs  error.rs  lib.rs  schema.rs
zenith-core/src/asset/: provider.rs
zenith-core/src/ast/: construction.rs  document.rs  mod.rs  node.rs  preview.rs  recipe.rs  span.rs  style.rs  token.rs  value.rs  variant.rs
zenith-core/src/diag_catalog/: catalog.rs  codes_a.rs  codes_c.rs
zenith-core/src/font/: alternates.rs  embedded.rs  local.rs  mod.rs  provider.rs
zenith-core/src/format/: mod.rs  writer.rs
zenith-core/src/markdown/: inline.rs
zenith-core/src/parse/: kdl_adapter.rs  mod.rs  transform.rs
zenith-core/src/schema/: attributes.rs  content.rs  kinds.rs  surfaces.rs  tokens.rs
zenith-core/src/tokens/: mod.rs  resolve.rs
zenith-core/src/validate/: check.rs  mod.rs
zenith-core/tests/: format_chart.rs  format_containers.rs  format_document.rs  format_nodes.rs  format_previews.rs  format_roundtrip.rs  format_text.rs  format_tokens_styles.rs  token_resolve.rs  token_resolve_visual.rs  validate_agent_runs.rs  validate_assets.rs  validate_chart.rs  validate_construction.rs  validate_containers.rs  validate_contrast.rs  validate_contrast_effects.rs  validate_geometry.rs  validate_layout.rs  validate_nodes.rs  validate_previews.rs  validate_shapes.rs  validate_structure.rs  validate_styles.rs  validate_tables.rs  validate_variants.rs
zenith-core/tests/common/: contrast.rs  mod.rs
zenith-core/tests/format_nodes/: anchor.rs  connector_label.rs  ellipse.rs  image.rs  round_trips.rs  safe_zone_fold.rs  unknown_property.rs
zenith-core/tests/format_tokens_styles/: gradient_theme.rs  mask_duotone.rs  shadow_filter.rs  styles.rs  token_set.rs
zenith-core/tests/validate_containers/: frame.rs  group.rs  semantic.rs
zenith-core/tests/validate_shapes/: connector.rs  polygon.rs  polygon_misc.rs
zenith-geometry/: Cargo.toml
zenith-geometry/src/: bezier.rs  boolean.rs  boolean_reconstruct.rs  bounds.rs  collision.rs  compound_path.rs  contour.rs  error.rs  fill_topology.rs  fit.rs  intersection.rs  lib.rs  path.rs  path_consumption.rs  point.rs  polyline.rs  transform.rs  validation.rs
zenith-geometry/src/path/: join.rs
zenith-layout/: Cargo.toml
zenith-layout/src/: engine.rs  error.rs  glyph_outline.rs  lib.rs  rustybuzz_engine.rs
zenith-scene/: Cargo.toml
zenith-scene/src/: color.rs  compile.rs  construction_overlay.rs  ir.rs  lib.rs  text_outline.rs
zenith-scene/src/compile/: anchor.rs  chain.rs  container.rs  ctx.rs  data_resolve.rs  dispatch.rs  entry.rs  field.rs  footnote.rs  leaf.rs  (+14 more)
zenith-scene/tests/: anchor.rs  autofit.rs  chain.rs  code.rs  containers.rs  containers_flow.rs  containers_frame.rs  containers_grid.rs  containers_group.rs  containers_import_instance.rs  containers_instance.rs  containers_rotation.rs  fields.rs  font_local.rs  image.rs  page.rs  page_source_import.rs  recipe.rs  runaround.rs  shapes.rs  shapes_connectors.rs  shapes_effects.rs  shapes_filters.rs  shapes_paths.rs  shapes_polygons.rs  shapes_primitives.rs  shapes_rect_fills.rs  shapes_shape_node.rs  table.rs  table_borders.rs  table_cells.rs  table_flow.rs  table_headers.rs  table_layout.rs  text.rs  text_align.rs  text_features.rs  text_glyph_runs.rs  text_layout.rs  text_markdown.rs  (+2 more)
zenith-session/: Cargo.toml
zenith-session/src/: bundle.rs  layout.rs  lib.rs  manifest.rs  retention.rs  scratch.rs
(+361 files in other folders)
