[package]
name = "zenith-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Zenith core: KDL parser adapter, semantic AST, canonical formatter, tokens, validation, and diagnostics."

[dependencies]
kdl = "6.7.1"
oxidoc-highlight = "0.1.1"

[lints]
workspace = true
