[package]
name = "zenith-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
readme.workspace = true
description = "Zenith deterministic vector geometry math."

[dependencies]

[lints]
workspace = true
