[package]
name = "zenith-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Zenith text shaping and font metrics (rustybuzz + ttf-parser)."

[dependencies]
zenith-core = { workspace = true }
rustybuzz = "0.20"

[lints]
workspace = true
