[package]
name = "zenith-scene"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Zenith backend-neutral scene IR and compilation (geometry, text wrap, anchors, opacity, clip)."

[dependencies]
zenith-core = { workspace = true }
zenith-layout = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyphenation = { version = "0.8.4", default-features = false, features = ["embed_en-us"] }

[lints]
workspace = true
