[package]
name = "zenith-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Zenith document identity, ephemeral session DAG, and content-addressed version store."

[dependencies]
dirs = "5"
flate2 = "1"
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
